--- a/HaierOven/Cookbook/Views/Cookbook.storyboard
+++ b/HaierOven/Cookbook/Views/Cookbook.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -102,7 +102,7 @@
                                                     <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="17"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Qz-0c-CFQ">
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Qz-0c-CFQ" customClass="AutoSizeLabelView">
                                                     <rect key="frame" x="20" y="41" width="189" height="40"/>
                                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <constraints>
@@ -138,6 +138,7 @@
                                                     <state key="highlighted" image="icon_gfcp_s.png"/>
                                                 </button>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="5Qz-0c-CFQ" firstAttribute="top" secondItem="2ST-Cq-DTt" secondAttribute="bottom" constant="9" id="1vR-HI-mJa"/>
                                                 <constraint firstItem="3Yb-bu-NIh" firstAttribute="centerY" secondItem="utr-qf-NeX" secondAttribute="centerY" id="2UL-pE-mWs"/>
@@ -155,6 +156,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="utr-qf-NeX" secondAttribute="bottom" constant="19.5" id="yUT-ET-tZd"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="70" id="e9d-yT-7My">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -169,7 +171,9 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="45" id="c82-Ad-rdX">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -187,6 +191,7 @@
                                                     </state>
                                                 </button>
                                             </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="p3n-ws-fae" firstAttribute="leading" secondItem="idO-MH-XrF" secondAttribute="leading" constant="18" id="bQu-cy-UMW"/>
                                                 <constraint firstAttribute="trailing" secondItem="p3n-ws-fae" secondAttribute="trailing" constant="17" id="fMp-qM-OWr"/>
@@ -194,6 +199,7 @@
                                                 <constraint firstItem="p3n-ws-fae" firstAttribute="top" secondItem="idO-MH-XrF" secondAttribute="top" constant="7" id="wHZ-U2-NOb"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -203,7 +209,9 @@
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="smK-F0-EMr" id="d4E-bR-vda">
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -260,11 +268,12 @@
                         <outlet property="headerView" destination="lqh-Rt-pqG" id="Ng0-fP-0s5"/>
                         <outlet property="learnCookBtnCell" destination="c82-Ad-rdX" id="sLx-Qm-nDj"/>
                         <outlet property="rightNavigationView" destination="Npu-jC-DnP" id="WAN-GX-KPw"/>
+                        <outlet property="tagsView" destination="5Qz-0c-CFQ" id="bid-wu-X0s"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wxv-Pi-CNf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="413" y="70"/>
+            <point key="canvasLocation" x="499" y="70"/>
         </scene>
     </scenes>
     <resources>
