更新项目详情

--- a/HaierOven/Cookbook/Views/CommentListCell.xib
+++ b/HaierOven/Cookbook/Views/CommentListCell.xib
@@ -12,7 +12,9 @@
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wf0-0a-ns2" id="aWm-kZ-qCI">
                 <autoresizingMask key="autoresizingMask"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <point key="canvasLocation" x="471" y="308"/>
         </tableViewCell>
     </objects>
