--- a/HaierOven/Cookbook/Views/OvenInfoCell.xib
+++ b/HaierOven/Cookbook/Views/OvenInfoCell.xib
@@ -26,7 +26,7 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="海尔智能烤箱0007ERRNC型号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yHH-EO-IVZ">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="海尔智能烤箱0007ERRNC型号" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yHH-EO-IVZ">
                         <rect key="frame" x="93" y="10.5" width="172" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="tlX-dv-Sg7"/>
