--- a/HaierOven/Cookbook/Views/Cookbook.storyboard
+++ b/HaierOven/Cookbook/Views/Cookbook.storyboard
@@ -57,11 +57,11 @@
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQf-Zd-uEO">
-                                    <rect key="frame" x="228" y="206" width="72" height="30"/>
+                                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQf-Zd-uEO">
+                                    <rect key="frame" x="212" y="201" width="100" height="41.5"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="30" id="4yz-u1-KrK"/>
-                                        <constraint firstAttribute="width" constant="72" id="Z7w-n8-haI"/>
+                                        <constraint firstAttribute="width" constant="100" id="Z7w-n8-haI"/>
+                                        <constraint firstAttribute="width" secondItem="zQf-Zd-uEO" secondAttribute="height" multiplier="12:5" id="w7d-ku-DWE"/>
                                     </constraints>
                                     <state key="normal" image="icon_follow.png">
                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -74,9 +74,9 @@
                                 <constraint firstAttribute="bottom" secondItem="9OH-IQ-WUJ" secondAttribute="bottom" id="1Ti-Yd-7uu"/>
                                 <constraint firstAttribute="bottom" secondItem="unU-9k-fqA" secondAttribute="bottom" constant="25.5" id="2ae-ok-nF2"/>
                                 <constraint firstItem="7RA-72-NEa" firstAttribute="leading" secondItem="lqh-Rt-pqG" secondAttribute="leading" constant="20" id="CDG-QD-dZF"/>
-                                <constraint firstAttribute="trailing" secondItem="zQf-Zd-uEO" secondAttribute="trailing" constant="20" id="PMG-hZ-ZWu"/>
+                                <constraint firstAttribute="trailing" secondItem="zQf-Zd-uEO" secondAttribute="trailing" constant="8" id="PMG-hZ-ZWu"/>
+                                <constraint firstItem="unU-9k-fqA" firstAttribute="centerY" secondItem="zQf-Zd-uEO" secondAttribute="centerY" constant="0.25" id="PPW-ma-cQ2"/>
                                 <constraint firstItem="9OH-IQ-WUJ" firstAttribute="leading" secondItem="lqh-Rt-pqG" secondAttribute="leading" id="QgW-X6-by1"/>
-                                <constraint firstAttribute="bottom" secondItem="zQf-Zd-uEO" secondAttribute="bottom" constant="20" id="eXr-0H-HMM"/>
                                 <constraint firstAttribute="bottom" secondItem="6Ms-RU-hbI" secondAttribute="bottom" id="hRa-QL-dmI"/>
                                 <constraint firstAttribute="trailing" secondItem="9OH-IQ-WUJ" secondAttribute="trailing" id="jxa-6w-wg0"/>
                                 <constraint firstItem="6Ms-RU-hbI" firstAttribute="leading" secondItem="lqh-Rt-pqG" secondAttribute="leading" id="nwU-IS-Kct"/>
@@ -259,8 +259,10 @@
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="cookbookDescCell" destination="e9d-yT-7My" id="tji-Z8-V3n"/>
+                        <outlet property="cookbookDescLabel" destination="hKg-OC-Whd" id="HNj-fj-KFd"/>
                         <outlet property="cookbookDetailCell" destination="smK-F0-EMr" id="B8x-No-8Td"/>
                         <outlet property="cookbookImageView" destination="9OH-IQ-WUJ" id="B4z-x6-L8Z"/>
+                        <outlet property="cookbookNameLabel" destination="iSN-cF-wSK" id="3gw-Uc-H0v"/>
                         <outlet property="cookbookTitleCell" destination="HkO-oc-X2t" id="SeP-L3-wlU"/>
                         <outlet property="creatorAvatar" destination="7RA-72-NEa" id="hep-MZ-0fQ"/>
                         <outlet property="creatorNameLabel" destination="unU-9k-fqA" id="3nV-GR-sZZ"/>
