--- a/HaierOven/Cookbook/Views/Cookbook.storyboard
+++ b/HaierOven/Cookbook/Views/Cookbook.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81f" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
@@ -10,9 +10,9 @@
         <mutableArray key="FZLTHJW.ttf">
             <string>FZLTHJW--GB1-0</string>
             <string>FZLTHJW--GB1-0</string>
+            <string>FZLTHJW--GB1-0</string>
         </mutableArray>
         <mutableArray key="FZLTXHK.TTF">
-            <string>FZLTXHK--GBK1-0</string>
             <string>FZLTXHK--GBK1-0</string>
         </mutableArray>
     </customFonts>
@@ -58,7 +58,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zQf-Zd-uEO">
-                                    <rect key="frame" x="212" y="201" width="100" height="41.5"/>
+                                    <rect key="frame" x="212" y="201" width="100" height="42"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="100" id="Z7w-n8-haI"/>
                                         <constraint firstAttribute="width" secondItem="zQf-Zd-uEO" secondAttribute="height" multiplier="12:5" id="w7d-ku-DWE"/>
@@ -181,10 +181,10 @@
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="c82-Ad-rdX" id="idO-MH-XrF">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3n-ws-fae">
-                                                    <rect key="frame" x="18" y="7" width="285" height="30"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3n-ws-fae">
+                                                    <rect key="frame" x="18" y="7" width="285" height="31"/>
                                                     <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <fontDescription key="fontDescription" name="FZLTXHK--GBK1-0" family="FZLanTingHei-EL-GBK" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" name="FZLTHJW--GB1-0" family="FZLanTingHeiS-R-GB" pointSize="16"/>
                                                     <state key="normal" title="新手学烘焙">
                                                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -235,7 +235,7 @@
                             </button>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="8YA-gB-0VK">
-                            <view key="customView" alpha="0.0" contentMode="scaleToFill" id="Npu-jC-DnP">
+                            <view key="customView" hidden="YES" alpha="0.0" contentMode="scaleToFill" id="Npu-jC-DnP">
                                 <rect key="frame" x="154" y="5" width="120" height="33"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
@@ -268,6 +268,7 @@
                         <outlet property="creatorNameLabel" destination="unU-9k-fqA" id="3nV-GR-sZZ"/>
                         <outlet property="followButton" destination="zQf-Zd-uEO" id="i8b-95-lbO"/>
                         <outlet property="headerView" destination="lqh-Rt-pqG" id="Ng0-fP-0s5"/>
+                        <outlet property="learnButton" destination="p3n-ws-fae" id="hKl-NP-dpN"/>
                         <outlet property="learnCookBtnCell" destination="c82-Ad-rdX" id="sLx-Qm-nDj"/>
                         <outlet property="rightNavigationView" destination="Npu-jC-DnP" id="WAN-GX-KPw"/>
                         <outlet property="tagsView" destination="5Qz-0c-CFQ" id="bid-wu-X0s"/>
